# temporary-belle2-policy-package

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml
src/belleii_rucio_policy_package/: __init__.py  lfn2pfn.py  non_deterministic_pfn.py  permission.py  schema.py  scope.py
