[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "belleii_rucio_policy_package"
version = "0.0.6"
authors = [
    { name="Belle II", email="placeholder@placeholder.com" },
]
description = "Rucio policy package for the Belle II experiment"
requires-python = ">=3.9"
classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
]
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = [
    "rucio @ git+https://github.com/rucio/rucio@master"
]

[tool.ruff]
line-length = 256


# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
